navegabilidad de cliente a servidor (peticion)

--- a/WebContent/archivos_html/altaClienteView.html
+++ b/WebContent/archivos_html/altaClienteView.html
@@ -7,7 +7,8 @@
 </head>
 <body>
 <section>
-	<form action="Tienda/altaCliente" method="post" name="altaColegio"
+<!-- de momento lo ponemos con el nombre del proyecto -->
+	<form action="/Ej15_GitHub/Tienda/altaCliente" method="post" name="altaColegio"
 		enctype="text/html">
 
 		<h2>Alta Tienda</h2>
@@ -38,16 +39,6 @@
 		<input type="hidden" name="id" id="id"/>
 		</fieldset>
 		
-
-		<div class="texto">
-			<label for="numAlumnos" class="mano">Número de Alumnos:</label>
-		</div>
-		<div class="elemento">
-			<input type="text" id="numAlumnos" name="numAlumnos" size="5" required />
-		</div>
-
-
-
 		<br />
 		<br /> <input type="submit" id="enviar" value="Enviar" class="mano" />
 		<input type="reset" id="borrar" value="Borrar" class="mano" />
