--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -3,8 +3,15 @@
 <head>
 <meta charset="UTF-8">
 <title>Inicio</title>
+<link rel="stylesheet" href="css/estilos_formulario.css" />
 </head>
 <body>
+
+	<a href="archivos_html/altaClienteView.html"> A ALTA CLIENTE </a>
+<!-- 	con esta no se va al jsp sino al servlet DIRECTAMENTE # provis las otras antes a otra 
+	<a href="#"> A SERVLET TIENDA LISTAR TODOS </a>   -->
+	   <a href="/Ej15_GitHub/Tienda/listarTodos.jsp"> A SERVLET TIENDA LISTAR TODOS </a> 
+	<a href="jsp/buscarPorNombre.jsp"> A BUSCAR POR NOMBRE </a>
 
 </body>
 </html>
