add caso de uso listarTodos completo

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -8,10 +8,12 @@
 <body>
 
 	<a href="archivos_html/altaClienteView.html"> A ALTA CLIENTE </a>
-<!-- 	con esta no se va al jsp sino al servlet DIRECTAMENTE # provis las otras antes a otra 
+	<!-- 	con esta no se va al jsp sino al servlet DIRECTAMENTE # provis las otras antes a otra 
 	<a href="#"> A SERVLET TIENDA LISTAR TODOS </a>   -->
-	   <a href="/Ej15_GitHub/Tienda/listarTodos.jsp"> A SERVLET TIENDA LISTAR TODOS </a> 
+	<a href="/Ej15_GitHub/Tienda/listarTodos"> A SERVLET TIENDA LISTAR
+		TODOS </a>
 	<a href="jsp/buscarPorNombre.jsp"> A BUSCAR POR NOMBRE </a>
+	<!-- //va al archivo sin pasar por el serlet -->
 
 </body>
 </html>
